--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -1,6 +1,9 @@
 <app-header></app-header>
 
 <div class="login-container">
-	<app-login-card (login)="onLogin($event)"></app-login-card>
+	<app-login-card
+    (login)="onLogin($event)"
+    [loading]="loading">
+  </app-login-card>
 </div>
 
