--- a/src/app/shared/components/login-card/login-card.component.html
+++ b/src/app/shared/components/login-card/login-card.component.html
@@ -12,7 +12,14 @@
 		</ion-item>
 
 		<div class="actions">
-			<ion-button color="warning" (click)="onSubmit()">Login</ion-button>
+			<ion-button
+        color="warning"
+        expand="block"
+        [disabled]="loading || !username || !password"
+        (click)="onSubmit()">
+        <ion-spinner *ngIf="loading" name="lines-small"></ion-spinner>
+        <span *ngIf="!loading">Login</span>
+      </ion-button>
 		</div>
 	</ion-card-content>
 </ion-card>
