Move group dropdown logic to groups page for better reusability
update build script in package.json, and improve styles for login card

--- a/src/app/pages/groups/groups.page.html
+++ b/src/app/pages/groups/groups.page.html
@@ -1,5 +1,11 @@
 <app-header></app-header>
 
 <section class="groups-page">
-  <app-group-dropdown></app-group-dropdown>
+  <app-group-dropdown
+    [groups]="groups"
+    [selectedId]="selectedId"
+    [loading]="loading"
+    (selectionChange)="onSelectionChange($event)"
+    (confirmClick)="onConfirmSelection()">
+  </app-group-dropdown>
 </section>
