--- a/src/app/pages/login/login.page.scss
+++ b/src/app/pages/login/login.page.scss
@@ -1,7 +1,7 @@
 .login-container {
 	display: grid;
 	place-items: center;
-	min-height: calc(100dvh - 56px);
+	min-height: calc(100dvh - var(--header-height));
 	padding: 16px;
 }
 
