--- a/src/app/pages/groups/groups.page.scss
+++ b/src/app/pages/groups/groups.page.scss
@@ -10,7 +10,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  min-height: calc(100vh - 56px);
+  min-height: calc(100vh - var(--header-height));
   width: 100%;
   box-sizing: border-box;
 
