--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,11 +5,21 @@
 @import "@ionic/angular/css/typography.css";
 
 :root {
-	--ion-color-primary: #355e93;
-	--ion-color-primary-rgb: 53, 94, 147;
-	--ion-color-primary-contrast: #ffffff;
-	--ion-color-primary-contrast-rgb: 255, 255, 255;
-	--ion-color-primary-shade: #2f5382;
-	--ion-color-primary-tint: #4a6fa0;
-	--ion-color-warning: #ef6c00;
+  /* Ionic theme colors */
+  --ion-color-primary: #355e93;
+  --ion-color-primary-rgb: 53, 94, 147;
+  --ion-color-primary-contrast: #ffffff;
+  --ion-color-primary-contrast-rgb: 255, 255, 255;
+  --ion-color-primary-shade: #2f5382;
+  --ion-color-primary-tint: #4a6fa0;
+  --ion-color-warning: #ef6c00;
+
+  /* Layout */
+  --header-height: 56px;
+
+  /* Colors */ 
+  --color-white: #ffffff;
+  --color-light-bg: #f9f9f9;
+  --color-light-gray: #f0f0f0;
+  --color-dark-text: #1a1a1a;
 }
