--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,8 +1,11 @@
 <ion-header translucent="true">
-	<ion-toolbar color="primary">
-		<div class="brand">
-			<ion-title class="title">Tangerine Client App</ion-title>
-		</div>
-	</ion-toolbar>
+  <ion-toolbar color="primary">
+	<div class="header-content">
+	  <div class="brand">
+		<ion-title class="title">Tangerine Client App</ion-title>
+	  </div>
+	  <app-logout-button *ngIf="showLogout" (logout)="onLogout()"></app-logout-button>
+	</div>
+  </ion-toolbar>
 </ion-header>
 
