Fix: Header and Scrolling issue

--- a/src/app/pages/forms/forms.page.html
+++ b/src/app/pages/forms/forms.page.html
@@ -1,9 +1,11 @@
 <app-header (logout)="onLogout()"></app-header>
 
-<section class="forms-page">
-  <app-form-list
-    [forms]="forms"
-    [loading]="loading"
-    (formSelect)="onFormSelect($event)">
-  </app-form-list>
-</section>
+<ion-content fullscreen="true">
+  <section class="forms-page">
+    <app-form-list
+      [forms]="forms"
+      [loading]="loading"
+      (formSelect)="onFormSelect($event)">
+    </app-form-list>
+  </section>
+</ion-content>
