--- a/src/app/pages/forms/forms.page.scss
+++ b/src/app/pages/forms/forms.page.scss
@@ -1,8 +1,9 @@
 :host {
   display: block;
-  min-height: 100vh;
+  height: 100%;
   background: var(--color-light-bg);
 }
+
 
 .forms-page {
   padding: 16px;
