--- a/src/app/pages/login/login.page.scss
+++ b/src/app/pages/login/login.page.scss
@@ -1,3 +1,10 @@
+:host {
+  display: block;
+  height: 100%;
+  background: var(--color-light-bg);
+}
+
+
 .login-container {
 	display: grid;
 	place-items: center;
