--- a/src/app/pages/server/server.page.scss
+++ b/src/app/pages/server/server.page.scss
@@ -1,16 +1,16 @@
 :host {
   display: block;
-  min-height: 100vh;
-  background: linear-gradient(135deg, #f5f7fa 0%, #e8ecf1 100%);
+  height: 100%;
+  background: var(--color-light-bg);
 }
 
+
 .server-container {
+  height: 100%;
   padding: 20px;
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
-  min-height: calc(100vh - var(--header-height));
   width: 100%;
   box-sizing: border-box;
 
