--- a/src/app/shared/components/login-card/login-card.component.html
+++ b/src/app/shared/components/login-card/login-card.component.html
@@ -1,26 +1,30 @@
 <ion-card class="login-card">
-	<ion-img class="logo" src="/tangerine-logo.png" alt="logo" draggable="false"/>
+	<ion-img class="logo" src="/tangerine-logo.png" alt="logo" draggable="false" />
+
 	<ion-card-content>
 		<ion-item fill="outline">
 			<ion-label position="floating">Username</ion-label>
-			<ion-input [(ngModel)]="username" autocomplete="username" />
+			<ion-input [(ngModel)]="username" autocomplete="username">
+			</ion-input>
 		</ion-item>
 
 		<ion-item fill="outline">
 			<ion-label position="floating">Password</ion-label>
-			<ion-input [(ngModel)]="password" type="password" autocomplete="current-password" />
+			<ion-input [(ngModel)]="password" type="password" autocomplete="current-password">
+			</ion-input>
 		</ion-item>
 
 		<div class="actions">
-			<ion-button
-        color="warning"
-        expand="block"
-        [disabled]="loading || !username || !password"
-        (click)="onSubmit()">
-        <ion-spinner *ngIf="loading" name="lines-small"></ion-spinner>
-        <span *ngIf="!loading">Login</span>
-      </ion-button>
+			<ion-button color="warning" expand="block" [disabled]="loading || !username || !password"
+				(click)="onSubmit()">
+
+				@if (loading) {
+				<ion-spinner name="lines-small"></ion-spinner>
+				} @else {
+				<span>Login</span>
+				}
+
+			</ion-button>
 		</div>
 	</ion-card-content>
 </ion-card>
-
