show back button on web

--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -2,14 +2,13 @@
 	<ion-toolbar color="primary">
 		<div class="header-content">
 			<div class="brand">
-        @if(showBackButtonOnNativeDevice){
+        @if(showBackButton){
           <ion-button class="back-btn" fill="clear" (click)="onBackClick()">
             <ion-icon name="chevron-back-outline" slot="icon-only" size="large" color="light"></ion-icon>
           </ion-button>
         }
         <ion-title class="title" [class.center-native]="isNative">Tangerine Client App</ion-title>
       </div>
-
 
 			@if (showLogout) {
 			<app-logout-button (logout)="onLogout()"></app-logout-button>
