--- a/android/app/src/main/res/layout/activity_webview.xml
+++ b/android/app/src/main/res/layout/activity_webview.xml
@@ -22,15 +22,15 @@
       android:textSize="18sp"
       android:textStyle="bold"/>
 
-    <TextView
-      android:id="@+id/back"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:paddingTop="16dp"
-      android:text="@string/back"
-      android:textColor="#ffffff"
-      android:textSize="18sp"
-      android:textStyle="bold"/>
+    <ImageView
+        android:id="@+id/back"
+        android:layout_width="wrap_content"
+        android:layout_height="60dp"
+        android:contentDescription="@string/back"
+        android:padding="8dp"
+        android:paddingTop="10dp"
+        android:src="@drawable/baseline_arrow_back_ios_24"
+        android:tint="#ffffff" />
   </RelativeLayout>
   <ProgressBar
     android:id="@+id/progress"
